add save functionality

--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,11 @@
     </div>
     <div class="form-group">
       <label for="api-key">API Key:</label>
-      <input type="password" id="api-key" name="api-key" required>
+      <input type="text" id="api-key" name="api-key" required>
+    </div>
+    <div class="form-group">
+      <label for="save-destination">Save Destination:</label>
+      <input type="text" id="save-destination" name="save-destination" placeholder="e.g., summaries/my-summary.md">
     </div>
     <button type="submit">Save</button>
   </form>
