--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,8 @@
     <div id="summary-container" style="display: none;">
       <h2>Summary</h2>
       <div id="summary"></div>
+      <button id="save-button">Save</button>
+      <div id="save-status"></div>
     </div>
     <div id="loading" style="display: none;">Loading...</div>
     <div id="error"style="display: none;"></div>
